deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-502
  labels:
    k8s-app: backend-502
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: backend-502
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: backend-502
        image: aledbf/error-502-next-upstream:0.1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-502
  labels:
    k8s-app: backend-502
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    k8s-app: backend-502
